--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -17,6 +17,11 @@ server {
       autoindex_exact_size off;
       charset utf-8,gbk;
   }
+  location /baidu {
+      proxy_redirect off;
+      proxy_pass http://www.baidu.com;
+      proxy_http_version 1.1;
+  }
   location $WS_PATH {
           proxy_redirect off;
           proxy_pass http://127.0.0.1:22323;
