--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -18,9 +18,12 @@ server {
       charset utf-8,gbk;
   }
   location /baidu {
-      proxy_redirect off;
       proxy_pass http://www.baidu.com;
       proxy_http_version 1.1;
+      proxy_set_header Host $host;
+       # Show real IP in v2ray access.log
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
   location $WS_PATH {
           proxy_redirect off;
